--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -23,7 +23,7 @@ button.paywithmcash:visited {
 	text-align: center;
 	color: #505050;
 	line-height: 1;
-	margin: 0 0 15px 0;
+	margin: 0;
 	padding: 0;
 	-webkit-appearance: none;
 	outline: none;
