--- a/assets/css/qr.css
+++ b/assets/css/qr.css
@@ -34,11 +34,23 @@
 	float: left;
 }
 .mcash-link {
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: top left;
+	width: 24px;
+	height: 24px;
 	font-family: 'HermesFB Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 12px;
 	color: #1f99a6;
-	line-height: 20px;
-	margin-left: 10px;
+	line-height: 24px;
+	text-indent: -9999em;
+	margin-left: 6px;
 	float: right;
+}
+.mcash-ios {
+	background-image: url(../images/ios.png);
+}
+.mcash-android {
+	background-image: url(../images/android.png);
 }
