--- a/assets/css/qr.css
+++ b/assets/css/qr.css
@@ -8,49 +8,48 @@
   font-style: normal;
   font-weight: 200;
 }
-#mcash-qr {
-	display: inline-block;
-}
+
 .mcash-wrapper {
-	border: 1px solid #ccc;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	background-color: #ebebeb;
-	padding: 10px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background-color: #ebebeb;
+    padding: 10px;
 }
-#mcash-qr img.mcash-qr-image {
-	border: 1px solid #dadada;
-	max-width: 280px;
-	display: block;
-	margin-bottom: 10px;
+.mcash-wrapper .mcash-qr-image {
+    border: 1px solid #dadada;
+    max-width: 280px;
+    display: block;
+    margin-bottom: 10px;
 }
 #mcash-nav {
-	overflow: hidden;
+    overflow: hidden;
 }
 .mcash-logo {
-	width: auto;
-	height: 24px;
-	float: left;
+    width: auto;
+    height: 24px;
+    float: left;
 }
 .mcash-link {
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: top left;
-	width: 24px;
-	height: 24px;
-	font-family: 'HermesFB Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-weight: normal;
-	font-size: 12px;
-	color: #1f99a6;
-	line-height: 24px;
-	text-indent: -9999em;
-	margin-left: 6px;
-	float: right;
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+    background-position: top left;
+    width: 24px;
+    height: 24px;
+    font-family: 'HermesFB Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    font-size: 12px;
+    color: #1f99a6;
+    line-height: 24px;
+    text-indent: -9999em;
+    margin-left: 6px;
+    float: right;
 }
 .mcash-ios {
-	background-image: url('../images/ios.png');
+    background-image: url('../images/ios.png');
 }
 .mcash-android {
-	background-image: url('../images/android.png');
+    background-image: url('../images/android.png');
 }
