--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -16,15 +16,20 @@
     -moz-border-radius: 5px;
     border-radius: 5px;
     background-color: #ebebeb;
+    background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,.05), rgba(0,0,0,0));
+	background-image: -moz-linear-gradient(bottom, rgba(0,0,0,.05), rgba(0,0,0,0));
+	background-image: -o-linear-gradient(bottom, rgba(0,0,0,.05), rgba(0,0,0,0));
+	background-image: -ms-linear-gradient(bottom, rgba(0,0,0,.05), rgba(0,0,0,0));
+	background-image: linear-gradient(to top, rgba(0,0,0,.05), rgba(0,0,0,0));
     /*width: 300px;*/
     height: 44px;
     font-family: 'HermesFB Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
     text-align: center;
-    color: #1f99a6;
+    color: #505050;
     line-height: 1;
     margin: 0;
-    padding: 0;
+    padding: 0 20px;
     -webkit-appearance: none;
     outline: none;
     cursor: pointer;
@@ -42,21 +47,47 @@
     color: #505050;
 }
 .paywithmcash img {
-    width: 30px !important;
+    width: auto !important;
     height: 30px !important;
     margin: 6px !important;
-    float: left;
+    float: right;
 }
 .paywithmcash span.label {
-    border-left: 1px solid #ccc;
-    color: #1f99a6;
+    color: #002f65;
     width: auto;
     max-width: 100%;
     line-height: 42px;
     text-align: center;
-    padding: 0 20px;
+    padding: 0 4px 0 0;
     float: left;
 }
 .paywithmcash:hover span.label {
     border-color: #ddd;
+}
+
+.mcash-green {
+	border: 1px solid #4ea190;
+	background-color: #57b3a0;
+	background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
+	background-image: -moz-linear-gradient(bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
+	background-image: -o-linear-gradient(bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
+	background-image: -ms-linear-gradient(bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
+	background-image: linear-gradient(to top, rgba(0,0,0,.1), rgba(0,0,0,0));
+}
+
+.mcash-green span.label {
+	color: #fff;
+}
+
+.mcash-green:hover {
+	border: 1px solid #4ea190;
+    background: #53aa98;
+}
+.mcash-green:active {
+    -webkit-box-shadow: inset 0 4px 4px rgba(0,0,0,.05);
+    -moz-box-shadow: inset 0 4px 4px rgba(0,0,0,.05);
+    box-shadow: inset 0 4px 4px rgba(0,0,0,.05);
+    position: relative;
+    top: 1px;
+    color: #fff;
 }
