--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -46,13 +46,13 @@
     top: 1px;
     color: #505050;
 }
-.paywithmcash img {
+.paywithmcash  img {
     width: auto !important;
     height: 30px !important;
     margin: 6px !important;
     float: right;
 }
-.paywithmcash span.label {
+.paywithmcash .mcash-label {
     color: #002f65;
     width: auto;
     max-width: 100%;
@@ -61,7 +61,7 @@
     padding: 0 4px 0 0;
     float: left;
 }
-.paywithmcash:hover span.label {
+.paywithmcash:hover .mcash-label {
     border-color: #ddd;
 }
 
@@ -75,7 +75,7 @@
 	background-image: linear-gradient(to top, rgba(0,0,0,.1), rgba(0,0,0,0));
 }
 
-.mcash-green span.label {
+.mcash-green .mcash-label {
 	color: #fff;
 }
 
@@ -83,6 +83,7 @@
 	border: 1px solid #4ea190;
     background: #53aa98;
 }
+
 .mcash-green:active {
     -webkit-box-shadow: inset 0 4px 4px rgba(0,0,0,.05);
     -moz-box-shadow: inset 0 4px 4px rgba(0,0,0,.05);
